Thu Oct 21 10:26:18 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * TAO_IDL/be/be_visitor_component/executor_exs.cpp:
          Removed whitespaces from generated code.

Thu Oct 21 08:01:49 UTC 2010  Martin Corino  <mcorinom@remedy.nl>

        * tests/Bug_3919_Regression/Test.idl:
        * tests/Bug_3919_Regression/client.cpp:
          Changes to get rid of wchar problems.

Wed Oct 20 19:50:32 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_component/facet_private_exh.cpp:
        * TAO_IDL/be_include/be_visitor_component/facet_private_exh.h:

          Renamed these files (and visitor classes) to the entries below.

        * TAO_IDL/be/be_visitor_component/executor_private_exh.cpp:
        * TAO_IDL/be_include/be_visitor_component/executor_private_exh.h:

          Renamed these files (and visitor classes) from the entries above.

        * TAO_IDL/be/be_visitor_attr_setarg_type.cpp:
        * TAO_IDL/be/be_visitor_member_type_decl.cpp:
        * TAO_IDL/be/be_visitor_attr_return.cpp:
        * TAO_IDL/be/be_visitor_attr_assign.cpp:
        * TAO_IDL/be/be_visitor_component/executor_exs_attr_init.cpp:
        * TAO_IDL/be_include/be_visitor_attr_assign.h:
        * TAO_IDL/be_include/be_visitor_attr_setarg_type.h:
        * TAO_IDL/be_include/be_visitor_component/executor_exs_attr_init.h:
        * TAO_IDL/be_include/be_visitor_attr_return.h:
        * TAO_IDL/be_include/be_visitor_member_type_decl.h:

          New files and visitor classes, to generate args, return types,
          member types, and initialization of members, according to
          the naming rules for CORBA types.

        * TAO_IDL/be/be_attribute.cpp:
        * TAO_IDL/be/be_visitor_component.cpp:
        * TAO_IDL/be/be_visitor_operation/operation_exs.cpp:
        * TAO_IDL/be/be_visitor_any_extracted_type_decl.cpp:
        * TAO_IDL/be/be_visitor_component/facet_exs.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svh.cpp: