@@ -297,39 +297,39 @@ be_visitor_executor_exs::visit_component (be_component *node)
       << "{" << be_idt_nl
       << "throw ::CORBA::INTERNAL ();" << be_uidt_nl
       << "}" << be_uidt << be_uidt_nl
-      << "}" << be_uidt_nl;
+      << "}";
 
   if (ACE_OS::strcmp (be_global->ciao_container_type (), "Session") == 0)
     {
-      os_ << be_idt_nl
+      os_ << be_uidt_nl << be_idt_nl
           << "void" << be_nl
           << lname << "_exec_i::configuration_complete (void)"
           << be_nl
           << "{" << be_idt_nl
           << your_code_here_ << be_uidt_nl
-          << "}" << be_uidt_nl;
+          << "}";
 
-      os_ << be_idt_nl
+      os_ << be_uidt_nl << be_idt_nl
           << "void" << be_nl
           << lname << "_exec_i::ccm_activate (void)" << be_nl
           << "{" << be_idt_nl
           << your_code_here_ << be_uidt_nl
-          << "}" << be_uidt_nl;
+          << "}";
 
-      os_ << be_idt_nl
+      os_ << be_uidt_nl << be_idt_nl
           << "void" << be_nl
           << lname << "_exec_i::ccm_passivate (void)" << be_nl
           << "{" << be_idt_nl
           << your_code_here_ << be_uidt_nl
-          << "}" << be_uidt_nl;
+          << "}";
     }
 
-  os_ << be_idt_nl
+  os_ << be_uidt_nl << be_idt_nl
       << "void" << be_nl
       << lname << "_exec_i::ccm_remove (void)" << be_nl
       << "{" << be_idt_nl
       << your_code_here_ << be_uidt_nl
-      << "}" << be_uidt_nl;
+      << "}";
 
   return 0;
 }
