@@ -25,6 +25,7 @@
 
 #include "utl_identifier.h"
 #include "nr_extern.h"
+#include <TAO_IDL/be_include/be_helper.h>
 
 be_visitor_component_scope::be_visitor_component_scope (
       be_visitor_context *ctx)
@@ -294,7 +295,7 @@ be_visitor_component_scope::gen_exec_entrypoint_decl (void)
 void
 be_visitor_component_scope::gen_exec_entrypoint_defn (void)
 {
-  os_ << be_nl << be_nl
+  os_ << be_uidt_nl << be_idt_nl
       << "extern \"C\" " << export_macro_.c_str ()
       << " ::Components::EnterpriseComponent_ptr" << be_nl
       << "create_" << node_->flat_name ()
@@ -303,11 +304,11 @@ be_visitor_component_scope::gen_exec_entrypoint_defn (void)
       << "::Components::EnterpriseComponent_ptr retval ="
       << be_idt_nl
       << "::Components::EnterpriseComponent::_nil ();"
-      << be_uidt_nl << be_nl
+      << be_uidt_nl << be_uidt << be_idt
       << "ACE_NEW_NORETURN (" << be_idt_nl
       << "retval," << be_nl
       << node_->local_name () << "_exec_i);"
-      << be_uidt_nl << be_nl
+      << be_uidt_nl << be_uidt << be_idt
       << "return retval;" << be_uidt_nl
       << "}";
 }
